# cga2vga

./: build.sh  buildmb.sh  buildpico.sh  readme.md
mandelbrot/: CMakeLists.txt  cgah.pio  cgain.pio  hsync.pio  mandelbrot.c  mdain.pio  rgb.pio  vsync.pio
pico/: CMakeLists.txt  scanvideo_minimal.c
